# Noyze

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml
crates/dsp-core/: Cargo.toml
crates/dsp-core/pkg/: noyze_dsp.d.ts  noyze_dsp.js  noyze_dsp_bg.wasm  noyze_dsp_bg.wasm.d.ts  package.json
crates/dsp-core/src/: beat_detect.rs  chain.rs  configs.rs  fft_utils.rs  lib.rs  registry.rs
crates/dsp-core/src/effects/: auto_eq.rs  beats.rs  deepen.rs  excite.rs  fp_disrupt.rs  loop_maker.rs  mod.rs  ref_warp.rs  reshape.rs  reverb.rs  saturate.rs  stereo_widen.rs  sub_bass.rs  tape_flutter.rs  transient.rs  warp.rs
crates/dsp-core/tests/: perf_test.rs
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx
web/src/components/: Controls.tsx  EffectControls.tsx  PresetBar.tsx  Randomizer.tsx  Transport.tsx  Waveform.tsx
web/src/dsp/: effectRegistry.ts  presets.ts  processing.test.ts  types.ts  worker.ts
web/src/styles/: index.css
