[package]
name = "noyze-dsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustfft = "6"
realfft = "3"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Optimized DSP libraries
fundsp = "0.18"
biquad = "0.4"
apodize = "1"
rubato = "0.15"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--low-memory-unused", "--gufa", "--converge"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

